--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.10.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.13",
     "react-router-dom": "^6.22.2",
     "uuid": "^9.0.1"
   }
